--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
 </head>
 
 <body>
-
-    <h1>Vaxt : <span class="timeIndicator"></span></h1>
-    <section>
+    <div class="indicators">
+        <h1>Vaxt : <span class="timeIndicator"></span></h1>
+        <h1>Cəhd Sayı: <span class="attemptIndicator"></span></h1>
+    </div>
+    <section id="main">
     </section>
-    <div class="win">
+    <div class="win-box">
         <div class="win-gif">
             <video width="320" height="240" alt="win-dance" autoplay loop muted>
                 <source src="./assets/Clarence_dancing.mp4" type="video/mp4" />
@@ -22,7 +24,7 @@
         <span class="win-msg">Təbriklər, qazandınız</span>
         <button class="btn" id="winBtn">Yenidən oyna</button>
     </div>
-    <div class="time">
+    <div class="timeout">
         <div class="time-gif">
             <img src="./assets/giphy.gif" alt="time-out" width="320" height="240">
         </div>
